# yt-playlist-dl

./: .gitignore  README.md  download_playlist.bat  list.txt.example  pyproject.toml  yt_download_playlist.bat  yt_playlist_dl_config.yaml  yt_playlist_dl_config.yaml.example
yt_playlist_dl/: cli.py  config.py  downloader.py
